# metaplayers-hackathon-2023

./: .gitignore  README.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/backend/: api.py  question_answering.py  scrape_data.py  server.py
backend/backend/answer_generation/: full_pipeline.py  gpt.py
backend/backend/api/: api.py
backend/backend/document_retrieval/: api.py  retriever_reader.py
backend/backend/scraping/: clean_html.py  scrape_data.py
backend/backend/scripts/: api.py  scrape_all_current_hungarian.py
backend/backend/server/: api.py  business_logic.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.module.css  App.tsx
frontent/: package-lock.json  package.json
