[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Matt Sárdi <sardi.matt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
farm-haystack = {extras = ["faiss"], version = "^1.13.2"}
pyprojroot = "^0.2.0"
beautifulsoup4 = "^4.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
